# gtest_action

./: CMakeLists.txt  Dockerfile  README.md  action.yml  entrypoint.sh
.github/workflows/: build_docker_image.yml  lint.yml
